guest_reservationページの作成

--- a/app/assets/stylesheets/custom.scss
+++ b/app/assets/stylesheets/custom.scss
@@ -59,3 +59,22 @@ h1, h2 {
   background-size: cover;
   background-color: #464646;
 }
+
+.guests-new-wrapper {
+  width: 100vw;
+  height: 200vh;
+  background-image: image-url('#');
+  background-position: center center;
+  background-repeat: no-repeat;
+  background-attachment: fixed;
+  background-size: cover;
+  background-color: #464646;
+
+  .guest-new-container {
+    padding-top: 220px;
+
+    .form-group {
+      margin-bottom: 20px;
+    }
+  }
+}
