--- a/app/views/customers/edit.html.erb
+++ b/app/views/customers/edit.html.erb
@@ -2,7 +2,7 @@
   <div class="container">
     <div class="row">
       <div class="col-md-offset-4 col-md-4 customers-new-container">
-        <h1 class="text-center text-white">登録フォーム</h1>
+        <h1 class="text-center text-white">編集</h1>
 
         <%= render "form" %>
 
