--- a/app/views/reservations/edit.html.erb
+++ b/app/views/reservations/edit.html.erb
@@ -2,10 +2,11 @@
   <div class="container">
     <div class="row">
       <div class="col-md-offset-4 col-md-4 guests-new-container">
-        <h1 class="text-center text-white">次回予約フォーム<h1>
+        <h1 class="text-center text-white">予約変更<h1>
 
           <%= render "form" %>
           
+      </div>
     </div>
   </div>
 </div>
