--- a/app/views/customers/show.html.erb
+++ b/app/views/customers/show.html.erb
@@ -46,7 +46,7 @@
          <%= @customer.nail_technician_note %>
          </div>
           <%= link_to "編集", edit_customer_path %>
-          <%= link_to "カルテ", "#" %>
+          <%= link_to "カルテ一覧", treatment_records_path(customer_id: @customer.id) %>
           <%= link_to "次回予約", new_reservation_path(customer_id: @customer.id) %>
       </div>
     </div>
