--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -2,7 +2,7 @@
   <div class="container top-hero-container">
     <div class="row">
       <div class="col-md-offset-3 col-md-3">
-        <%= link_to 'Sign up', '#', class: 'btn btn-block btn-white' %>
+        <%= link_to 'Sign up', new_user_path, class: 'btn btn-block btn-white' %>
       </div>
       <div class="col-md-3">
         <%= link_to 'Log in', '#',class: 'btn btn-block btn-white' %>
