--- a/app/views/pages/index.html.erb
+++ b/app/views/pages/index.html.erb
@@ -1,8 +1,9 @@
 <div class="top-hero-wrapper text-center">
   <div class="container top-hero-container">
+    <h1 class="text-white">Make everyone happy with your nails.</h1>
     <div class="row">
       <div class="col-md-offset-3 col-md-3">
-        <%= link_to 'Sign up', '#', class: 'btn btn-block btn-white' %>
+        <%= link_to 'Sign up', new_user_path, class: 'btn btn-block btn-white' %>
       </div>
       <div class="col-md-3">
         <%= link_to 'Log in', '#',class: 'btn btn-block btn-white' %>
