ログイン機能とヘッダー

--- a/app/assets/stylesheets/custom.scss
+++ b/app/assets/stylesheets/custom.scss
@@ -46,6 +46,24 @@ h1, h2, h3 {
   height: 45px;
 }
 
+.navbar-transparent {
+  margin-bottom: 0px;
+  background-color: rgba(0,0,0,0.5);
+  a {
+    color: #fff !important;
+  }
+
+  .navbar-brand {
+    padding: 0px;
+    margin-top: 15px;
+  }
+
+  img {
+    height: 40px;
+  }
+}
+
+
 .users-new-wrapper {
   width: 100vw;
   height: 100vh;
