--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -14,6 +14,42 @@
       <div class="alert alert-<%= key %>" role="alert"><%= value %></div>
     <% end %>
 
+    <nav class="navbar navbar-default navbar-fixed-top navbar-transparent">
+      <div class="container">
+        <%= link_to root_path do %>
+          <span><%= image_tag "icons/polish.png", class: "navbar-brand" %></span>
+        <% end %>
+        <ul class="nav navbar-nav navbar-right">
+          <% if logged_in? %>
+            <li>
+              <%= link_to customers_path do %>
+                <%= image_tag "icons/customer_index.png" %>
+              <% end %>
+            </li>
+            <li>
+              <%= link_to reservations_path do %>
+                <%= image_tag "icons/reservation_index.png" %>
+              <% end %>
+            </li>
+            <li>
+              <%= link_to logout_path, method: :delete do %>
+                <%= image_tag "icons/logout.png" %>
+              <% end %>
+            </li>
+          <% else %>
+            <li>
+              <%= link_to "新規登録", new_user_path %>
+            </li>
+            <li>
+              <%= link_to login_path do %>
+                <%= image_tag "icons/login.png" %>
+              <% end %>
+            </li>
+          <% end %>
+        </ul>
+      </div>
+    </nav>
+
     <%= yield %>
 
     <script>
