--- a/app/views/customers/consent_form.html.erb
+++ b/app/views/customers/consent_form.html.erb
@@ -1,25 +1,25 @@
 <div class="customers-consent_form-wrapper">
   <div class="container">
     <div class="row">
-      <div class="col-md-offset-3 col-md-6 customers-new-container">
-        <h1 class="text-center text-white">同意書</h1>
-        <p class="text-center text-white">ご不明な点は事前に説明させて頂きますのでお声がけくださいませ。</p>
-        　<ul class="text-white">
-            <li>施術中に痛みやかゆみが生じた場合すぐにお申し出下さい。</li>
-            <li>皮膚疾患が見られる場合施術ができない場合があります。</li>
-            <li>ジェルネイルは紫外線を含むUVライトで硬化させる為、紫外線アレルギーの方は照射にてアレルギー症状を引き起こす可能性がございます。ご心配な方は事前に医師へのご確認をお願いします。</li>
-            <li>スカルプチュア（長さ出し）は自爪の倍以内の長さまでとさせて頂きます。</li>
-            <li>ジェルネイル又はスカルプチュアが浮いてきたり、亀裂が入ったまま放置すると自爪との間に水が溜まり、グリーンネイルになってしまう恐れがありますのでお直しにご来店下さい。</li>
-            <li>ご自身で無理矢理除去されますと自爪を傷める原因となりますのでお止めください。</li>
-            <li>当店では施術後一切の返金を行なっておりません。</li>
-            <li>ジェルネイルの浮きや剥がれが生じた場合、施術日を含め１週間以内にご連絡頂き、施術者が確認したお客様のみ無料でお直しさせて頂きます。デザイン変更及びオフに関しては保証の対象外とさせて頂きます。</li>
-            <li>施術中の携帯電話のご利用は、溶剤による機器の変色や故障の恐れがありますのでご注意下さい。</li>
-            <li>ネイルサロンでは、溶剤の使用、ダストの飛散がございます。お連れのお子様の安全管理は保護者の判断、責任とさせて頂きます。</li>
-            <li>遅刻された場合、他のお客様のご迷惑にならないよう、施術内容を限らせて頂きます。</li>
-            <li>度重なる当日キャンセル、無断キャンセルをされるお客様には当店のご利用を控えて頂く場合がございます。</li>
+      <div class="customers-new-container">
+        <h1 class="text-center text-gray title">同意書</h1>
+        <p class="text-center text-gray">ご不明な点は事前にご説明させて頂きますので、お声がけくださいませ。</p>
+        　<ul class="text-gray">
+            <li class="text-gray side-line under-line">施術中に痛みやかゆみが生じた場合はすぐにお申し出下さい。</li>
+            <li class="text-gray side-line under-line">皮膚疾患が見られる場合は施術ができない場合があります。</li>
+            <li class="text-gray side-line under-line">ジェルネイルは紫外線を含むUVライトで硬化させる為、紫外線アレルギーの方は照射にてアレルギー症状を引き起こす可能性がございます。ご心配な方は事前に医師へのご確認をお願い致します。</li>
+            <li class="text-gray side-line under-line">スカルプチュア（長さ出し）は自爪の倍以内の長さまでとさせて頂きます。</li>
+            <li class="text-gray side-line under-line">ジェルネイル又はスカルプチュアが浮いてきたり亀裂が入ったまま放置すると、自爪との間に水が溜まり、グリーンネイルを引き起こす恐れがあります。お早めにお直しにご来店下さい。</li>
+            <li class="text-gray side-line under-line">ご自身で無理矢理除去されますと自爪を傷める原因となりますのでお止めください。</li>
+            <li class="text-gray side-line under-line">当店では施術後一切の返金を行なっておりません。</li>
+            <li class="text-gray side-line under-line">ジェルネイルの浮きや剥がれが生じた場合、施術日を含め１週間以内にご連絡頂き、施術者が確認したお客様のみ無料でお直しさせて頂きます。デザイン変更及びオフに関しては保証の対象外とさせて頂きます。</li>
+            <li class="text-gray side-line under-line">施術中の携帯電話のご利用は、溶剤による機器の変色や故障の恐れがありますのでご注意下さい。</li>
+            <li class="text-gray side-line under-line">ネイルサロンでは、溶剤の使用、ダストの飛散がございます。お連れのお子様の安全管理は保護者様の判断、責任とさせて頂きます。</li>
+            <li class="text-gray side-line under-line">予約時間に遅刻された場合、他のお客様のご迷惑にならないよう、施術内容を限らせて頂きます。</li>
+            <li class="text-gray side-line under-line">度重なる当日キャンセル、無断キャンセルをされるお客様には当店のご利用をお控え頂く場合がございます。</li>
 
-            <li>上記の説明を十分に受けた後、自らの意思に基づき自らの責任でネイルを実施する。</li>
-            <li>よってその結果万一身体症状に何らかの異常が発生してもnailsalon Gläntaが民事刑事その一切の責任を負わないことにつき了解し、nailsalon Gläntaに対する一切の請求権を放棄する。</li>
+            <li class="text-gray dark-side-line under-line">上記の説明を十分に受けた後、自らの意思に基づき自らの責任でネイルを実施する。</li>
+            <li class="text-gray dark-side-line under-line">よってその結果万一身体症状に何らかの異常が発生してもnailsalon Gläntaが民事刑事その一切の責任を負わないことにつき了解し、nailsalon Gläntaに対する一切の請求権を放棄する。</li>
           </ul>
         </div>
       </div>
