--- a/app/views/pages/index.html.erb
+++ b/app/views/pages/index.html.erb
@@ -1,12 +1,12 @@
 <div class="top-hero-wrapper text-center">
   <div class="container top-hero-container">
-    <h1 class="text-white">Make everyone happy with your nails.</h1>
+    <h1 class="comment">Make everyone happy with your nails.</h1>
     <div class="row">
       <div class="col-md-offset-3 col-md-3">
-        <%= link_to 'Sign up', new_user_path, class: 'btn btn-block btn-white' %>
+        <%= link_to 'Sign up', new_user_path, class: 'btn btn-block btn-gray' %>
       </div>
       <div class="col-md-3">
-        <%= link_to 'Log in', login_path, class: 'btn btn-block btn-white' %>
+        <%= link_to 'Log in', login_path, class: 'btn btn-block btn-gray' %>
       </div>
     </div>
   </div>
