--- a/app/views/customers/edit.html.erb
+++ b/app/views/customers/edit.html.erb
@@ -2,69 +2,69 @@
   <div class="container">
     <div class="row">
       <div class="col-md-offset-4 col-md-4 customers-new-container">
-        <h1 class="text-center text-white">ご登録フォーム</h1>
+        <h1 class="text-center text-gray">ご登録フォーム</h1>
 
         <%= form_for @customer do |f| %>
           <div class="form-group">
-            <%= f.label :name, "お名前", class: 'text-white' %>
+            <%= f.label :name, "お名前", class: 'text-gray' %>
             <%= f.text_field :name, class: 'form-control' %>
           </div>
           <div class="form-group">
-            <%= f.label :name_kana, "ヨミガナ", class: 'text-white' %>
+            <%= f.label :name_kana, "ヨミガナ", class: 'text-gray' %>
             <%= f.text_field :name_kana, class: 'form-control' %>
           </div>
           <div class="form-group">
-            <%= f.label :birthday, "生年月日", class: 'text-white' %>
+            <%= f.label :birthday, "生年月日", class: 'text-gray' %>
             <%= f.date_select :birthday, autofocus: true, prompt:"--", use_month_numbers: true, start_year: Time.now.year, end_year: 1900, date_separator: '/', class: 'form-control' %>
           </div>
           <div class="form-group">
-            <%= f.label :job, "ご職業", class: 'text-white' %>
+            <%= f.label :job, "ご職業", class: 'text-gray' %>
             <%= f.text_field :job, class: 'form-control' %>
           </div>
           <div class="form-group">
-            <%= f.label :postcode, "郵便番号", class: 'text-white' %>
+            <%= f.label :postcode, "郵便番号", class: 'text-gray' %>
             <%= f.text_field :postcode, class: 'form-control' %>
           </div>
           <div class="form-group">
-            <%= f.label :street_address, "住所", class: 'text-white' %>
+            <%= f.label :street_address, "住所", class: 'text-gray' %>
             <%= f.text_field :street_address, class: 'form-control' %>
           </div>
           <div class="form-group">
-            <%= f.label :phone_number, "電話番号", class: 'text-white' %>
+            <%= f.label :phone_number, "電話番号", class: 'text-gray' %>
             <%= f.text_field :phone_number, class: 'form-control' %>
           </div>
           <div class="form-group">
-            <%= f.label :email, "メールアドレス", class: 'text-white' %>
+            <%= f.label :email, "メールアドレス", class: 'text-gray' %>
             <%= f.text_field :email, class: 'form-control' %>
           </div>
           <div class="form-group">
-            <%= f.label :line_id, "line ID（任意）", class: 'text-white' %>
+            <%= f.label :line_id, "LINE ID（任意）", class: 'text-gray' %>
             <%= f.text_field :line_id, class: 'form-control' %>
           </div>
           <div class="form-group">
-            <%= f.label :allergy, "アレルギー（任意）", class: 'text-white' %>
+            <%= f.label :allergy, "アレルギー（任意）", class: 'text-gray' %>
             <%= f.text_field :allergy, class: 'form-control' %>
           </div>
           <div class="form-group">
-            <%= f.label :introducer_name, "ご紹介者様（任意）", class: 'text-white' %>
+            <%= f.label :introducer_name, "ご紹介者様（任意）", class: 'text-gray' %>
             <%= f.text_field :introducer_name, class: 'form-control' %>
           </div>
           <div class="form-group">
-            <%= f.label :request, "爪のお悩み・ご要望（任意）", class: 'text-white' %>
+            <%= f.label :request, "爪のお悩み・ご要望（任意）", class: 'text-gray' %>
             <%= f.text_field :request, class: 'form-control' %>
           </div>
           <div class="form-group">
-            <p class="text-white">施術を安心して受けて頂く為に、利用規約を必ずご確認下さい。</P>
+            <p class="text-gray">施術を安心して受けて頂く為に、利用規約を必ずご確認下さい。</P>
             <%= f.check_box :consent , {}, "true", "false" %>
-            <label class="text-white">
+            <label class="text-gray">
             <%= link_to "利用規約", customer_consent_form_path %>に同意する</label>
           </div>
           <div class="form-group">
-            <%= f.label :nail_technician_note, "ネイリスト記入欄", class: 'text-white' %>
+            <%= f.label :nail_technician_note, "ネイリスト記入欄", class: 'text-gray' %>
             <%= f.text_field :nail_technician_note, class: 'form-control' %>
           </div>
 
-          <%= f.submit "登録", class: 'btn-block btn-white' %>
+          <%= f.submit "登録", class: 'btn-block btn-gray' %>
         <% end %>
 
 
