--- a/app/views/customers/guest.html.erb
+++ b/app/views/customers/guest.html.erb
@@ -2,35 +2,35 @@
   <div class="container">
     <div class="row">
       <div class="col-md-offset-4 col-md-4 guests-new-container">
-        <h1 class="text-center text-white">仮登録フォーム<h1>
+        <h1 class="text-center text-gray">仮登録フォーム<h1>
         <%= form_for @customer, url: { action: 'guest_create' } do |f| %>
           <div class="form-group">
-          <%= f.label :name_kana, "ヨミガナ", class: 'text-white' %>
+          <%= f.label :name_kana, "ヨミガナ", class: 'text-gray' %>
           <%= f.text_field :name_kana, class: 'form-control' %>
           </div>
           <div class="form-group">
-            <%= f.label :phone_number, "電話番号", class: 'text-white' %>
+            <%= f.label :phone_number, "電話番号", class: 'text-gray' %>
             <%= f.text_field :phone_number, class: 'form-control' %>
           </div>
           <div class="form-group">
-            <%= f.label :introducer_name, "ご紹介者様", class: 'text-white' %>
+            <%= f.label :introducer_name, "ご紹介者様", class: 'text-gray' %>
             <%= f.text_field :introducer_name, class: 'form-control' %>
           </div>
           <%= f.fields_for :reservations do |i| %>
             <div class="form-group">
-              <%= i.label :reservation_date, "予約日", class: 'text-white' %>
+              <%= i.label :reservation_date, "予約日", class: 'text-gray' %>
               <%= i.date_field :reservation_date, class: 'form-control' %>
             </div>
             <div class="form-group">
-              <%= i.label :reservation_time, "予約時間", class: 'text-white' %>
+              <%= i.label :reservation_time, "予約時間", class: 'text-gray' %>
               <%= i.time_field :reservation_time, class: 'form-control' %>
             </div>
             <div class="form-group">
-              <%= i.label :note, "メモ", class: 'text-white' %>
+              <%= i.label :note, "メモ", class: 'text-gray' %>
               <%= i.text_field :note, class: 'form-control' %>
             </div>
           <% end %>
-          <%= f.submit "登録", class: 'btn-block btn-white' %>
+          <%= f.submit "登録", class: 'btn-block btn-gray' %>
         <% end %>
       </div>
     </div>
