--- a/app/views/customers/index.html.erb
+++ b/app/views/customers/index.html.erb
@@ -1,15 +1,15 @@
-<div class="customer-index-wrapper">
+<div class="reservations-index-wrapper">
   <div class="container">
-    <h1>お客様リスト<h1>
-    <% @customer.each do |customer| %>
-      <div class="row">
-        <div class="col-md-6 col-md-offset-3">
-          <div class="customer-index-single">
-            <p><%= link_to customer.name_kana, edit_customer_path(customer.id) %></p>
-          </div>
+    <div class="row">
+      <div class="col-md-6 col-md-offset-3">
+        <div class="reservations-index-single">
+          <h2 class="text-center text-gray">お客様リスト</h2>
+            <% @customer.each do |customer| %>
+              <p><%= link_to customer.name_kana, customer_path(customer.id) %></p>
+            <% end %>
+            <%= link_to "新規登録", new_customer_path %>
         </div>
       </div>
-    <% end %>
-    <%= link_to "新規登録", new_customer_path %>
+    </div>
   </div>
 </div>
