--- a/app/views/reservations/_form.html.erb
+++ b/app/views/reservations/_form.html.erb
@@ -1,17 +1,17 @@
-<h2 class="text-center text-white"><%= @customer.name_kana %>様</h2>
+<h2 class="text-center text-gray"><%= @customer.name_kana %>様</h2>
 <%= form_for @reservation do |f| %>
  <div class="form-group">
-   <%= f.label :reservation_date, "予約日", class: 'text-white' %>
+   <%= f.label :reservation_date, "予約日", class: 'text-gray' %>
    <%= f.date_field :reservation_date, class: 'form-control' %>
  </div>
  <div class="form-group">
-   <%= f.label :reservation_time, "予約時間", class: 'text-white' %>
+   <%= f.label :reservation_time, "予約時間", class: 'text-gray' %>
    <%= f.time_field :reservation_time, class: 'form-control' %>
  </div>
  <div>
-   <%= f.label :note, "メモ", class: 'text-white' %>
+   <%= f.label :note, "メモ", class: 'text-gray' %>
    <%= f.text_field :note, class: 'form-control' %>
  </div>
   <%= f.hidden_field :customer_id, value: @customer.id %>
- 　<%= f.submit "登録", class: 'btn-block btn-white' %>
+ 　<%= f.submit "登録", class: 'btn-block btn-gray' %>
 　 <% end %>
