--- a/app/views/reservations/index.html.erb
+++ b/app/views/reservations/index.html.erb
@@ -3,27 +3,51 @@
     <div class="row">
       <div class="col-md-6 col-md-offset-3">
         <div class="reservations-index-single">
-          <h2 class="text-white">予約一覧</h2>
-　　　　　　<h3 class="text-white">名前検索</h3>
+          <h2 class="text-gray">予約一覧</h2>
+　　　　　　<h3 class="text-gray">名前検索</h3>
             <div class="search-form">
               <%=form_tag(reservations_path, method: :get) do %>
                 <%= text_field_tag :search %>
                 <%= submit_tag 'Search', name: nil %>
               <% end %>
             </div>
+
             <table>
-             <tbody>
-              <% @reservations.each do |reservation| %>
+              <thead>
                 <tr>
-                  <td class="text-white"><%= reservation.reservation_date %></td>
-                  <td class="text-white"><%= reservation.reservation_time %></td>
-                  <td class="text-white"><%= reservation.note %></td>
-                  <% reservation_customer = reservation.customer %>
-                  <td class="text-white"><%= link_to reservation_customer.name_kana, customer_path(reservation_customer.id) %></td>
+                  <th>Name</th>
+                  <th>reservation time</th>
+                  <th colspan="3"></th>
                 </tr>
+              </thead>
+
+              <tbody>
+                <% @reservations.each do |reservation| %>
+                  <tr>
+                   <td><%= reservation.customer.name_kana %></td>
+                   <td><%= reservation.start_time %></td>
+                   <td><%= link_to 'Show', reservation %></td>
+                   <td><%= link_to 'Edit', edit_reservation_path(reservation) %></td>
+                   <td><%= link_to 'Destroy', reservation, method: :delete, data: { confirm: 'Are you sure?' } %></td>
+                 </tr>
+                <% end %>
+              </tbody>
+            </table>
+
+            <br>
+            <%= month_calendar events: @reservations do |reservation_date, reservations| %>
+              <%= reservation_date %>
+
+              <% reservations.each do |reservation| %>
+                <div>
+                  <%= reservation.start_time.hour %>:<%= reservation.start_time.min %>
+                  <%= reservation.customer.name_kana %>
+                </div>
               <% end %>
-           </tbody>
-          </table>
+            <% end %>
+
+            <%= link_to 'New Reservation', new_reservation_path %>
+
         </div>
       </div>
     </div>
