--- a/app/views/treatment_records/index.html.erb
+++ b/app/views/treatment_records/index.html.erb
@@ -3,11 +3,15 @@
     <div class="row">
       <div class="col-md-6 col-md-offset-3">
         <div class="reservations-index-single">
-          <h2 class="text-center text-white">カルテ一覧</h2>
-          <h3 class="text-center text-white"><%= @customer.name_kana %>様</h3>
+          <h2 class="text-center text-gray">カルテ一覧</h2>
+          <h3 class="text-center text-gray"><%= @customer.name_kana %>様</h3>
 
           <% @customer.reservations.each do |reservation| %>
-            <p class="text-white"><%= link_to reservation.reservation_date, treatment_record_path(id: reservation.treatment_record.id) %></p>
+            <% if !reservation.treatment_record.nil? %>
+             <p class="text-gray"><%= link_to reservation.reservation_date, treatment_record_path(id: reservation.treatment_record.id) %></p>
+            <% else %>
+             <p class="text-gray"><%= reservation.reservation_date %></p>
+            <% end %>
           <% end %>
 
         </div>
