--- a/app/views/customers/show.html.erb
+++ b/app/views/customers/show.html.erb
@@ -1,8 +1,11 @@
-<div class="customers-new-wrapper">
+<div class="treatment_record-wrapper">
   <div class="container">
     <div class="row">
-      <div class="col-md-offset-4 col-md-4 customers-new-container">
+      <div class="col-md-offset-4 col-md-4 treatment_record-container">
         <h1 class="text-center text-gray title">詳細ページ</h1>
+        <%= link_to "編集", edit_customer_path %>
+        <%= link_to "カルテ一覧", treatment_records_path(customer_id: @customer.id) %>
+        <%= link_to "次回予約", new_reservation_path(customer_id: @customer.id) %>
          <div class="text-gray side-line under-line">
          お名前：<%= @customer.name %>
          </div>
@@ -45,9 +48,6 @@
          <div class="text-gray side-line under-line">
          ネイリストメモ：<%= @customer.nail_technician_note %>
          </div>
-          <%= link_to "編集", edit_customer_path %>
-          <%= link_to "カルテ一覧", treatment_records_path(customer_id: @customer.id) %>
-          <%= link_to "次回予約", new_reservation_path(customer_id: @customer.id) %>
       </div>
     </div>
   </div>
