--- a/app/views/treatment_records/show.html.erb
+++ b/app/views/treatment_records/show.html.erb
@@ -1,26 +1,26 @@
-<div class="customers-new-wrapper">
+<div class="treatment_record-wrapper">
   <div class="container">
     <div class="row">
-      <div class="col-md-offset-4 col-md-4 customers-new-container">
-        <h1 class="text-center text-gray">カルテ</h1>
-        <h2 class="text-center text-gray"><%= @customer.name_kana %>様</h2>
+      <div class="col-md-offset-4 col-md-4 treatment_record-container">
+        <h1 class="text-center text-gray title">カルテ</h1>
+        <h2 class="text-center text-gray subtitle"><%= @customer.name_kana %>様</h2>
         <h3 class="text-center text-gray"><%= @reservation.reservation_date %></h3>
-          <div class="text-white">支払い金額：
+          <div class="text-gray side-line under-line">支払い金額：
             <%= @treatment_record.amount_of_money %>
           </div>
-          <div class="text-gray">施術メニュー：
+          <div class="text-gray side-line under-line">施術メニュー：
             <%= @treatment_record.treatment_menu %>
           </div>
-          <div class="text-gray">使用ジェル：
+          <div class="text-gray side-line under-line">使用ジェル：
             <%= @treatment_record.gel_used %>
           </div>
-          <div class="text-gray">ポイントカード残数：
+          <div class="text-gray side-line under-line">ポイントカード残数：
             <%= @treatment_record.remaining_number_of_pointcards %>
           </div>
-          <div class="text-gray">ストーン残数：
+          <div class="text-gray side-line under-line">ストーン残数：
             <%= @treatment_record.remaining_number_of_stones %>
           </div>
-          <div class="text-gray">その他：
+          <div class="text-gray side-line under-line">その他：
             <%= @treatment_record.other %>
           </div>
           <%= link_to "編集", edit_treatment_record_path(id: @treatment_record.id) %>
