--- a/app/views/customers/index.html.erb
+++ b/app/views/customers/index.html.erb
@@ -1,9 +1,9 @@
-<div class="reservations-index-wrapper">
+<div class="customers-new-wrapper">
   <div class="container">
     <div class="row">
       <div class="col-md-6 col-md-offset-3">
-        <div class="reservations-index-single">
-          <h2 class="text-center text-gray">お客様リスト</h2>
+        <div class="customers-index-single">
+          <h1 class="text-center text-gray title">お客様リスト</h1>
             <% @customer.each do |customer| %>
               <p><%= link_to customer.name_kana, customer_path(customer.id) %></p>
             <% end %>
