--- a/app/views/treatment_records/edit.html.erb
+++ b/app/views/treatment_records/edit.html.erb
@@ -1,9 +1,9 @@
-<div class="customers-new-wrapper">
+<div class="treatment_record-wrapper">
   <div class="container">
     <div class="row">
-      <div class="col-md-offset-4 col-md-4 customers-new-container">
-        <h1 class="text-center text-gray">カルテ編集</h1>
-        <h2 class="text-center text-gray"><%= @treatment_record.customer_name_kana %>様</h2>
+      <div class="col-md-offset-4 col-md-4 reatment_record-container">
+        <h1 class="text-center text-gray title">カルテ編集</h1>
+        <h2 class="text-center text-gray subtitle"><%= @treatment_record.customer_name_kana %>様</h2>
         <h3 class="text-center text-gray"><%= @treatment_record.reservation_reservation_date %></h3>
         <%= form_for @treatment_record do |f| %>
         <div class="form-group">
