--- a/app/views/treatment_records/new.html.erb
+++ b/app/views/treatment_records/new.html.erb
@@ -1,17 +1,38 @@
-<div class="customers-new-wrapper">
+<div class="treatment_record-wrapper">
   <div class="container">
     <div class="row">
-      <div class="col-md-offset-4 col-md-4 customers-new-container">
-        <h1 class="text-center text-white">カルテ</h1>
-        <h2 class="text-center text-white"><%= @customer.name_kana %>様</h2>
-        <h3 class="text-center text-white"><%= @reservation.reservation_date %></h3>
+      <div class="col-md-offset-4 col-md-4 treatment_record-container">
+        <h1 class="text-gray text-center title">カルテ</h1>
+        <h2 class="text-gray text-center subtitle"><%= @customer.name_kana %>様</h2>
+        <h3 class="text-gray text-center"><%= @reservation.reservation_date %></h3>
         <%= form_for @treatment_record do |f| %>
-
-        <%= render "form" %>
-
+        <div class="form-group">
+          <%= f.label :amount_of_money, "金額", class: 'text-gray' %>
+          <%= f.text_field :amount_of_money, class: 'form-control' %>
+        </div>
+        <div class="form-group">
+          <%= f.label :treatment_menu, "施術メニュー", class: 'text-gray' %>
+          <%= f.text_field :treatment_menu, class: 'form-control' %>
+        </div>
+        <div class="form-group">
+          <%= f.label :gel_used, "使用ジェル", class: 'text-gray' %>
+          <%= f.text_field :gel_used, class: 'form-control' %>
+        </div>
+        <div class="form-group">
+          <%= f.label :remaining_number_of_pointcards, "ポイントカード残数", class: 'ttext-gray' %>
+          <%= f.number_field :remaining_number_of_pointcards, class: 'form-control', min: 0, max: 50 %>
+        </div>
+        <div class="form-group">
+          <%= f.label :remaining_number_of_stones, "ストーン残数", class: 'text-gray' %>
+          <%= f.number_field :remaining_number_of_stones, class: 'form-control', min: 0, max: 50 %>
+        </div>
+        <div class="form-group">
+          <%= f.label :other, "その他", class: 'text-gray' %>
+          <%= f.text_area :other, class: 'form-control', size: '30×10' %>
+        </div>
           <%= f.hidden_field :customer_id, value: @customer.id %>
           <%= f.hidden_field :reservation_id, value: @reservation.id %>
-          <%= f.submit "登録", class: 'btn-block btn-white' %>
+          <%= f.submit "登録", class: 'btn-block btn-gray' %>
         <% end %>
       </div>
     </div>
