--- a/app/views/reservations/show.html.erb
+++ b/app/views/reservations/show.html.erb
@@ -16,6 +16,7 @@
          <%= @reservation.note %>
          </div>
           <%= link_to "予約変更", edit_reservation_path(customer_id: @customer.id) %>
+          <%= link_to "予約取消", reservation_path(id: @reservation.id), method: :delete, data:{confirm:"本当に予約を取り消しますか？"} %>
           <%= link_to "カルテ作成", new_treatment_record_path(customer_id: @customer.id, reservation_id: @reservation.id) %>
           <%= link_to "次回予約", new_reservation_path(customer_id: @customer.id) %>
       </div>
