--- a/app/assets/stylesheets/custom.scss
+++ b/app/assets/stylesheets/custom.scss
@@ -27,17 +27,28 @@ h2 {
   font-size: 20px;
 }
 
-.btn-white {
-  color: #fff;
-  border: 1px solid #fff;
-  padding-top: 15px;
-  padding-bottom: 15px;
-  font-size: 20px;
-  background-color: rgba(0,0,0,0.0);
+.text-red {
+  color: #f01818;
+  margin-bottom: 10px;
+  padding-left: 5px;
+  font-size: 15px;
+  font-weight:200;
+}
 
-  &:hover {
-    color: #fff;
-  }
+.text-blue {
+  color: #728ab0;
+  margin-bottom: 10px;
+  padding-left: 5px;
+  font-size: 15px;
+  font-weight:200;
+}
+
+.explanation {
+  color: #5f656e;
+  margin-bottom: 10px;
+  padding-left: 5px;
+  font-size: 15px;
+  font-weight:200;
 }
 
 .btn-gray {
@@ -102,11 +113,6 @@ h2 {
 .users-new-wrapper {
   width: 100vw;
   height: 100vh;
-  background-image: image-url('#');
-  background-position: center center;
-  background-repeat: no-repeat;
-  background-attachment: fixed;
-  background-size: cover;
   background-color: #fafdff;
 
   .users-new-container {
@@ -213,10 +219,7 @@ p {
 
 .guests-new-wrapper {
   width: 100vw;
-  height: 150vh;
-  background-position: center center;
-  background-repeat: no-repeat;
-  background-attachment: fixed;
+  height: 90vh;
   background-size: cover;
   background-color: #fafdff;
 
@@ -232,7 +235,6 @@ p {
 .reservations-wrapper {
   width: 100vw;
   height: 150vh;
-  background-image: image-url('#');
   background-position: center center;
   background-repeat: no-repeat;
   background-attachment: fixed;
@@ -248,6 +250,22 @@ p {
   }
 }
 
+.reservations-index-wrapper {
+  width: 100vw;
+  height: 150vh;
+  background-size: cover;
+  background-color: #fafdff;
+
+  .reservations-index-container {
+    padding-top: 220px;
+
+    .form-group {
+      margin-bottom: 20px;
+    }
+  }
+}
+
+
 .search-form {
   margin-bottom: 20px;
 }
@@ -258,11 +276,7 @@ p {
 
 .users-new-wrapper {
   width: 100vw;
-  height: 100vh;
-  background-image: image-url('bg-top.png');
-  background-position: center center;
-  background-repeat: no-repeat;
-  background-attachment: fixed;
+  height: 120vh;
   background-size: cover;
   background-color: #fafdff;
 
@@ -273,4 +287,15 @@ p {
       margin-bottom: 20px;
     }
   }
+}
+
+.errors {
+  font-size: 15px;
+  color: #eb3434;
+}
+
+.login_user {
+  font-size: 15px;
+  padding-top: 30px;
+  filter: brightness(1) invert(0);
 }
