--- a/app/views/customers/_form.html.erb
+++ b/app/views/customers/_form.html.erb
@@ -1,62 +1,12 @@
-<%= form_for @customer do |f| %>
-  <div class="form-group">
-    <%= f.label :name, "お名前", class: 'text-white' %>
-    <%= f.text_field :name, class: 'form-control' %>
-  </div>
-  <div class="form-group">
-    <%= f.label :name_kana, "ヨミガナ", class: 'text-white' %>
-    <%= f.text_field :name_kana, class: 'form-control' %>
-  </div>
-  <div class="form-group">
-    <%= f.label :birthday, "生年月日", class: 'text-white' %>
-    <%= f.date_select :birthday, autofocus: true, prompt:"--", use_month_numbers: true, start_year: Time.now.year, end_year: 1900, date_separator: '/', class: 'form-control' %>
-  </div>
-  <div class="form-group">
-    <%= f.label :job, "ご職業", class: 'text-white' %>
-    <%= f.text_field :job, class: 'form-control' %>
-  </div>
-  <div class="form-group">
-    <%= f.label :postcode, "郵便番号", class: 'text-white' %>
-    <%= f.text_field :postcode, class: 'form-control' %>
-  </div>
-  <div class="form-group">
-    <%= f.label :street_address, "住所", class: 'text-white' %>
-    <%= f.text_field :street_address, class: 'form-control' %>
-  </div>
-  <div class="form-group">
-    <%= f.label :phone_number, "電話番号", class: 'text-white' %>
-    <%= f.text_field :phone_number, class: 'form-control' %>
-  </div>
-  <div class="form-group">
-    <%= f.label :email, "メールアドレス", class: 'text-white' %>
-    <%= f.text_field :email, class: 'form-control' %>
-  </div>
-  <div class="form-group">
-    <%= f.label :line_id, "line ID（任意）", class: 'text-white' %>
-    <%= f.text_field :line_id, class: 'form-control' %>
-  </div>
-  <div class="form-group">
-    <%= f.label :allergy, "アレルギー（任意）", class: 'text-white' %>
-    <%= f.text_field :allergy, class: 'form-control' %>
-  </div>
-  <div class="form-group">
-    <%= f.label :introducer_name, "ご紹介者様（任意）", class: 'text-white' %>
-    <%= f.text_field :introducer_name, class: 'form-control' %>
-  </div>
-  <div class="form-group">
-    <%= f.label :request, "爪のお悩み・ご要望（任意）", class: 'text-white' %>
-    <%= f.text_field :request, class: 'form-control' %>
-  </div>
-  <div class="form-group">
-    <p class="text-white">施術を安心して受けて頂く為に、利用規約を必ずご確認下さい。</P>
-    <%= f.check_box :consent , {}, "true", "false" %>
-    <label class="text-white">
-    <%= link_to "利用規約", customer_consent_form_path %>に同意する</label>
-  </div>
-  <div class="form-group">
-    <%= f.label :nail_technician_note, "ネイリスト記入欄", class: 'text-white' %>
-    <%= f.text_field :nail_technician_note, class: 'form-control' %>
-  </div>
+<%= form_with(model: customer, local: true) do |form| %>
+  <% if customer.errors.any? %>
+    <div id="error_explanation">
+      <h2><%= pluralize(customer.errors.count, "error") %> prohibited this product from being saved:</h2>
 
-  <%= f.submit "登録", class: 'btn-block btn-white' %>
-<% end %>
+      <ul>
+        <% customer.errors.full_messages.each do |message| %>
+          <li><%= message %></li>
+        <% end %>
+      </ul>
+    </div>
+  <% end %>
