--- a/app/views/customers/guest.html.erb
+++ b/app/views/customers/guest.html.erb
@@ -1,19 +1,21 @@
 <div class="guests-new-wrapper">
   <div class="container">
     <div class="row">
-      <div class="col-md-offset-4 col-md-4 guests-new-container">
+      <div class="col-md-offset-2 col-md-8 guests-new-container">
         <h1 class="text-center text-gray title">仮登録フォーム<h1>
+        <label class= "explanation">※漢字・ひらがな・カタカナは全角、記号・英数字は半角で入力</label>
+        <label class= "explanation">※全項目入力必須</label>
         <%= form_for @customer, url: { action: 'guest_create' } do |f| %>
           <div class="form-group">
-          <%= f.label :name_kana, "ヨミガナ", class: 'text-gray' %>
+          <%= f.label :name_kana, "ヨミガナ", class: 'text-gray' %><label class= "explanation">※姓名間スペースなし</label>
           <%= f.text_field :name_kana, class: 'form-control' %>
           </div>
           <div class="form-group">
-            <%= f.label :phone_number, "電話番号", class: 'text-gray' %>
+            <%= f.label :phone_number, "電話番号", class: 'text-gray' %><label class= "explanation">※ハイフンなし</label>
             <%= f.text_field :phone_number, class: 'form-control' %>
           </div>
           <div class="form-group">
-            <%= f.label :introducer_name, "ご紹介者様", class: 'text-gray' %>
+            <%= f.label :introducer_name, "ご紹介者様", class: 'text-gray' %><label class= "explanation">※カタカナ、姓名間スペースなし</label>
             <%= f.text_field :introducer_name, class: 'form-control' %>
           </div>
           <%= f.fields_for :reservations do |i| %>
