--- a/app/views/reservations/edit.html.erb
+++ b/app/views/reservations/edit.html.erb
@@ -1,11 +1,24 @@
 <div class="guests-new-wrapper">
   <div class="container">
     <div class="row">
-      <div class="col-md-offset-4 col-md-4 guests-new-container">
-        <h1 class="text-center text-white">予約変更<h1>
+      <div class="guests-new-container">
+        <h1 class="text-center text-gray title">予約変更<h1>
+          <h2 class="text-center text-gray subtitle"><%= @customer.name_kana %>様</h2>
+          <h3 class="text-center text-gray"><%= @reservation.reservation_date %></h3>
 
-          <%= render "form" %>
-          
+          <%= month_calendar(attribute: :reservation_date, events: @reservations) do |reservation_date, reservations| %>
+            <% if reservation_date >= Date.today %>
+             <%=link_to reservation_date, reservations_edit_timeselect_path(customer_id: @customer.id, id: @reservation.id, reservation_date: reservation_date) %>
+            <% else %>
+             <%= reservation_date %>
+            <% end %>
+            <% reservations.each do |reservation| %>
+              <div>
+                <%= reservation.reservation_time.hour %>:<%= reservation.reservation_time.min %>
+                <%= reservation.customer.name_kana %>様
+              </div>
+            <% end %>
+          <% end %>
       </div>
     </div>
   </div>
