--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -2,7 +2,7 @@
   <div class="container">
     <div class="row">
       <div class="col-md-offset-4 col-md-4 users-new-container">
-        <h1 class="text-center text-gray title">新規ユーザー登録</h1>
+        <h1 class="text-center text-gray title">ユーザー情報編集</h1>
         <%= form_for @user do |f| %>
           <div class="form-group">
             <%= f.label :name, class: 'text-gray' %>
@@ -13,7 +13,7 @@
             <%= f.text_field :email, class: 'form-control' %>
           </div>
           <div class="form-group">
-            <%= f.label :password, class: 'text-gray' %><label class= "explanation">※半角英数字の組み合わせで8文字以上</label>
+            <%= f.label :password, class: 'text-gray' %>
             <%= f.password_field :password, class: 'form-control' %>
           </div>
           <div class="form-group">
@@ -26,6 +26,7 @@
           </div>
           <%= f.submit "登録", class: 'btn-block btn-gray' %>
         <% end %>
+        <%= link_to "ユーザー情報削除", user_path(id: @user.id), method: :delete, data:{confirm:"本当にユーザー情報を削除しますか？"} %>
       </div>
     </div>
   </div>
