--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -1,11 +1,13 @@
-<div class="top-hero-wrapper text-center">
-  <div class="container top-hero-container">
+<div class="users-new-wrapper">
+  <div class="container">
     <div class="row">
-      <div class="col-md-offset-3 col-md-3">
-        <%= link_to 'Sign up', new_user_path, class: 'btn btn-block btn-white' %>
-      </div>
-      <div class="col-md-3">
-        <%= link_to 'Log in', '#',class: 'btn btn-block btn-white' %>
+      <div class="col-md-offset-4 col-md-4 users-new-container">
+        <h1 class="text-center text-gray title">ユーザー一覧</h1>
+        <% @user.each do |user| %>
+          <p><%= link_to user.name, edit_user_path(user.id) %></p>
+        <% end %>
+        <%= link_to "新規登録", new_user_path %>
+        <%= current_user.admin %>
       </div>
     </div>
   </div>
